<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.6</version>
    </parent>
    <groupId>com.huizhipay</groupId>
    <artifactId>huizhipay</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>huizhipay-common</module>
        <module>huizhipay-acquiring</module>
        <module>huizhipay-ledger</module>
        <module>huizhipay-risk</module>
        <module>huizhipay-settlement</module>
        <module>huizhipay-merchant</module>
        <module>huizhipay-bootstrap</module>
        <module>huizhipay-user</module>
    </modules>
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <!-- 全局依赖版本管理 -->
        <lombok.version>1.18.38</lombok.version>
        <manifold.version>2026.1.8</manifold.version>
        <mybatis-plus.version>3.5.16</mybatis-plus.version>
        <stripe.version>32.0.0</stripe.version>
        <jjwt.version>0.13.0</jjwt.version>
        <googleauth.version>1.5.0</googleauth.version>
        <springdoc.version>3.0.3</springdoc.version>
        <okhttp.version>4.12.0</okhttp.version>
        <stellar-sdk.version>3.0.0</stellar-sdk.version>
        <httpclient.version>4.5.14</httpclient.version>
        <flyway.version>12.10.0</flyway.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <!-- Manifold -->
            <dependency>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold</artifactId>
                <version>${manifold.version}</version>
            </dependency>
            <dependency>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-ext</artifactId>
                <version>${manifold.version}</version>
            </dependency>
            <dependency>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-ext-rt</artifactId>
                <version>${manifold.version}</version>
            </dependency>
            <dependency>
                <groupId>systems.manifold</groupId>
                <artifactId>manifold-science</artifactId>
                <version>${manifold.version}</version>
            </dependency>
            <!-- MyBatis-Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot4-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <!-- Stripe -->
            <dependency>
                <groupId>com.stripe</groupId>
                <artifactId>stripe-java</artifactId>
                <version>${stripe.version}</version>
            </dependency>
            <!-- PostgreSQL -->
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>42.7.13</version>
                <scope>runtime</scope>
            </dependency>
            <!-- JWT -->
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <!-- Google Authenticator -->
            <dependency>
                <groupId>com.warrenstrange</groupId>
                <artifactId>googleauth</artifactId>
                <version>${googleauth.version}</version>
            </dependency>
            <!-- SpringDoc OpenAPI -->
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <!-- OkHttp -->
            <dependency>
                <groupId>com.squareup.okhttp3</groupId>
                <artifactId>okhttp</artifactId>
                <version>${okhttp.version}</version>
            </dependency>
            <!-- Stellar SDK -->
            <dependency>
                <groupId>network.lightsail</groupId>
                <artifactId>stellar-sdk</artifactId>
                <version>${stellar-sdk.version}</version>
            </dependency>
            <!-- HttpClient -->
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${httpclient.version}</version>
            </dependency>
            <!-- Flyway -->
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-database-postgresql</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <!-- 内部模块依赖 -->
            <dependency>
                <groupId>com.huizhipay</groupId>
                <artifactId>huizhipay-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.huizhipay</groupId>
                <artifactId>huizhipay-acquiring</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.huizhipay</groupId>
                <artifactId>huizhipay-ledger</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.huizhipay</groupId>
                <artifactId>huizhipay-risk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.huizhipay</groupId>
                <artifactId>huizhipay-settlement</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.huizhipay</groupId>
                <artifactId>huizhipay-user</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.huizhipay</groupId>
                <artifactId>huizhipay-merchant</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <arg>-Xplugin:Manifold</arg>
                        <arg>-implicit:class</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>systems.manifold</groupId>
                            <artifactId>manifold-ext</artifactId>
                            <version>${manifold.version}</version>
                        </path>
                        <path>
                            <groupId>systems.manifold</groupId>
                            <artifactId>manifold-science</artifactId>
                            <version>${manifold.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>